--- a/src/styles/index2.css
+++ b/src/styles/index2.css
@@ -7,302 +7,8 @@
 
 body {
   background-color: #080f21;
-  font-family: 'Roboto', sans-serif;
-}
-
-.wrapper {
+  font-family: 'Roboto';
   max-width: 1900px;
   width: 90vw;
   margin: 0 auto;
 }
-  
-  /*HEADER IMAGE - HEADER MENU - LOGIN */
-.header {
-  display: flex;
-  text-align: center;
-  color: #fff;
-  margin: 1rem 0rem;
-}
-
-.brand {
-  flex: 1;
-  padding: 1rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-.brand-logo {
-  width: 400px;
-}
-
-.brand-info {
-  text-align: left;
-  width: 44%;
-  font-size: 1.2rem;
-  font-weight: 300;
-}
-  
-.navigation {
-  flex: 1.2;
-  display: flex;
-  flex-direction: column;
-}
-
-.menu {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  justify-content: space-around;
-  border-bottom: 1px solid rgb(65, 65, 65);
-  height: 100px;
-}
-
-.button {
-  height: 50%;
-  display: flex;
-  align-items: center;
-  width: 7rem;
-  text-align: center;
-  justify-content: center;
-}
-
-.menu li {
-  display: flex;
-  font-size: 18px;
-  color: #fff;
-  height: 100%;
-  text-align: center;
-  align-items: center;
-}
-  
-.menu li:hover {
-  border-bottom: 1px solid #fff;
-}
-
-.menu .login {
-  background-color: rgb(255, 196, 0);
-  color: #0F182E;
-}
-  
-  /* END HEADER */
-  
-  /* SUB MENU - SEARCH MOVIE FORM */
-  
-.submenu {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.submenu-items {
-  width: 100%;
-}
-
-.submenu li {
-  display: inline-block;
-  padding: 1.9rem;
-  font-size: 15px;
-  color: #fff;
-}
-
-.form-search {
-  padding: 1.9rem;
-}
-
-.search-movie {
-  padding: 0.6rem;
-  border: 1px solid #fff;
-  text-align: left;
-  width: 210px;
-}
-  
-.search-input {
-  background: #080f21;
-  opacity: 1;
-  border: 0;
-
-  color: #fff;
-}
-
-.search-movie > button {
-  display: inline;
-  background-color: #080f21;
-  color: rgb(255, 255, 255);
-  border: none;
-  outline: none;
-}
-  
-.content-movies {
-  display: flex;
-  color: #fff;
-}
-
-.view-movies {
-  flex: 1;
-}
-
-.details-movies {
-  width: 80%;
-}
-
-.title-list {
-  display: flex;
-  padding: 2rem 1rem;
-  justify-content: space-between;
-}
-
-.title {
-  display: flex;
-  justify-content: flex-start;
-  font-size: 25px;
-}
-
-.details {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  color: rgb(255, 196, 0);
-}
-
-.list-movies {
-  display: flex;
-}
-
-.movie {
-  padding: 0rem 1rem;
-  list-style: none;
-  width: 100%;
-}
-
-.rating {
-  display: flex;
-  justify-content: space-around;
-  color: rgb(255, 196, 0);
-}
-
-.rating > b {
-  text-align: center;
-  font-size: 12px;
-} 
-
-.rating > span:hover:before {
-  display: flex;
-  align-items: center;
-  content: "\2605";
-  position: absolute;
-}
-
-.rating-point {
-  margin: 0.3rem 0.1rem;
-  font-size: 12px;
-}
-
-.movie > p {
-  text-align: center;
-  font-size: 12px;
-  margin: 0.2rem 0rem;
-  height: 25px;
-}
-
-.movie-img {
-  width: 100%;
-  height: 80%;
-}
-
-.best-movie {
-  flex: 1.2;
-  display: flex;
-}
-
-.movie-description {
-  position: relative;
-}
-
-.description {
-  position: absolute;
-  background: black;
-  width: 430px;
-  bottom: 1rem;
-  right: 0;
-  opacity: 0.7;
-  padding: 1rem;
-}
-
-title-movie {
-  text-align: center;
-  font-size: 18px;
-  color: #fff;
-}
-
-.title-movie > p {
-  text-align: left;
-  padding-left: 1rem;
-}
-
-.best-title {
-  font-size: 30px;
-  font-weight: 900;
-}
-
-.best-description {
-  padding: 0.4rem 0rem;
-}
-
-.best-more {
-  color:rgb(255, 196, 0);
-}
-
-.best-movie-img {
-  width: 100%;
-}
-
-.top-movie {
-  display: flex;
-  flex-direction: column;
-}
-
-.footer {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-}
-
-.border {
-  border-top: 1px solid #fff;
-  width: 15%;
-  margin-top: 1rem;
-}
-
-.footer-submenu {
-  display: flex;
-  justify-content: space-around;
-  width: 50%;
-  margin: 1rem 0rem;
-}
-
-.footer-submenu-items {
-  display: flex;
-  text-align: center;
-  justify-content: flex-end;
-  width: 100%;
-
-}
-
-.footer-submenu li {
-  display: inline-block;
-  margin: 1rem 1.5rem;
-  font-size: 15px;
-  color: #fff;
-}
-
-.submenu-social {
-  display: flex;
-  color: #fff;
-  width: 45%;
-  align-items: center;
-}
-
-.submenu-social > span{
-  padding: 0rem 0.5rem;
-}
-
