--- a/src/components/Movies/Movie/style.module.scss
+++ b/src/components/Movies/Movie/style.module.scss
@@ -1,7 +1,7 @@
 .movie {
-  padding: 0rem 1rem;
   list-style: none;
   width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -11,7 +11,7 @@
 .rating {
   display: flex;
   justify-content: space-around;
-
+  font-size: 12px;
 }
 
 .rating > b {
@@ -19,16 +19,10 @@
   font-size: 12px;
 } 
 
-.rating > span:hover:before {
-  display: flex;
-  align-items: center;
-  content: "\2605";
-  position: absolute;
-}
-
 .rating_point {
   margin: 0.3rem 0.1rem;
   font-size: 12px;
+  color: rgb(255, 196, 0);
 }
 
 .movie > p {
@@ -39,7 +33,7 @@
 }
 
 .movie_img {
-  width: 120px;
-  height: 180px;
+  width: 100%;
+  height: 100%;
   cursor: pointer;
 }
