--- a/src/components/Movies/MovieDetails/style.module.scss
+++ b/src/components/Movies/MovieDetails/style.module.scss
@@ -11,10 +11,11 @@
 .img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  opacity: 0.2;
+  filter: blur(8px);
 }
 
-.img_content_details {
+.movie_content_details {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -23,14 +24,13 @@
 
 .img_background {
   position: absolute;
-  background: black;
   width: 100%;
   bottom: 0px;
   top: 0px;
-  opacity: 0.9;
   text-align: center;
   color: #fff;
   display: flex;
+  z-index: 1;
 }
 .img_front {
   width: 70%;
@@ -51,15 +51,15 @@
   width: 50%;
 }
 
-.start_rating {
+.star_rating {
   display: flex;
   font-size: 14px;
+  color: rgb(255, 196, 0);
 }
 
 .title_details {
-  font-size: 30px;
+  font-size: 40px;
   font-weight: 900;
-  padding-right: 1rem;
 }
 
 .info_details {
@@ -75,11 +75,19 @@
   flex-direction: column;
 }
 
-.details {
+.movie_details {
   display: flex;
   flex-direction: column;
   width: 90%;
   margin: 0 auto;
+  align-items: center;
+  letter-spacing: 1px;
+}
+
+.details {
+  display: flex;
+  justify-content: space-between;
+  width: 50%;
 }
 
 .details > p {
