--- a/src/components/Movies/style.module.scss
+++ b/src/components/Movies/style.module.scss
@@ -30,5 +30,10 @@
 
 .list_movies {
   display: flex;
+  justify-content: space-between;
 }
 
+.movie {
+  margin: 0rem 0.5rem;
+  list-style: none;
+}
