--- a/src/components/Movies/BestMovie/style.module.scss
+++ b/src/components/Movies/BestMovie/style.module.scss
@@ -15,6 +15,7 @@
   right: 0;
   opacity: 0.7;
   padding: 1rem;
+  z-index: 1;
 }
 
 .title {
@@ -55,10 +56,6 @@
   color: rgb(255, 196, 0);
 }
 
-.best_movie-img {
-  width: 100%;
-}
-
 .top_movie {
   display: flex;
   flex-direction: column;
@@ -67,4 +64,18 @@
 .best_movie_img {
   width: 100%;
   height: 100%;
+  animation: fadeImage 2s forwards;
+  -webkit-animation: fadeImage 2s forwards;
+  -o-animation: fadeImage 2s forwards;
+  -moz-animation: fadeImage 2s forwards;
+}
+
+
+@keyframes fadeImage {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
