--- a/src/components/Movies/Movie/style.module.scss
+++ b/src/components/Movies/Movie/style.module.scss
@@ -6,6 +6,10 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  animation: fadeImage 2s forwards;
+  -webkit-animation: fadeImage 2s forwards;
+  -o-animation: fadeImage 2s forwards;
+  -moz-animation: fadeImage 2s forwards;
 }
 
 .rating {
@@ -36,4 +40,14 @@
   width: 100%;
   height: 100%;
   cursor: pointer;
+
+}
+
+@keyframes fadeImage {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
