--- a/src/components/Movies/Movie/style.module.scss
+++ b/src/components/Movies/Movie/style.module.scss
@@ -6,10 +6,31 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  position: relative;
   animation: fadeImage 2s forwards;
   -webkit-animation: fadeImage 2s forwards;
   -o-animation: fadeImage 2s forwards;
   -moz-animation: fadeImage 2s forwards;
+  &:hover{
+    .description {
+      display: block;
+    }
+    .info_movie {
+      display: block;
+    }
+  }
+}
+
+.description {
+  position: absolute;
+  background: black;
+  width: 100%;
+  bottom: 0rem;
+  right: 0;
+  opacity: 0.7;
+  padding: 1rem;
+  z-index: 1;
+  display: none;
 }
 
 .rating {
@@ -41,6 +62,55 @@
   height: 100%;
   cursor: pointer;
 
+}
+
+.movie_description {
+  position: relative;
+  width: 100%;
+}
+
+
+
+.title {
+  display: flex;
+  justify-content: flex-start;
+  font-size: 25px;
+}
+
+.title_list {
+  display: flex;
+  padding: 2rem 1rem;
+  justify-content: space-between;
+}
+
+.title_movie {
+  text-align: center;
+  font-size: 18px;
+  color: #fff;
+  cursor: pointer;
+}
+
+.info_movie {
+  font-size: 14px;
+  position: absolute;
+  left: 0;
+  bottom: 5px;
+  width: 100%;
+  display: none;
+  z-index: 1;
+}
+
+.best_title {
+  font-size: 30px;
+  font-weight: 900;
+}
+
+.best_description {
+  margin: 0.5rem;
+}
+
+.best_more {
+  color: rgb(255, 196, 0);
 }
 
 @keyframes fadeImage {
