--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -5,21 +5,22 @@
 }
 
 .brand {
-  flex: 1;
   padding: 1rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  width: 50%;
 }
 
 .brand_logo {
-  width: 400px;
+  width: 50%;
   height: 37%;
+  min-width: 380px;
 }
 
 .brand_info {
   text-align: left;
-  width: 44%;
+  width: 50%;
   font-size: 1.2rem;
   font-weight: 300;
 }
@@ -36,7 +37,6 @@
   width: 100%;
   justify-content: space-around;
   border-bottom: 1px solid rgb(65, 65, 65);
-  height: 100px;
 }
 
 .button {
@@ -48,20 +48,20 @@
   justify-content: center;
 }
 
-.menu li {
+.option_menu {
   display: flex;
   font-size: 18px;
   color: #fff;
   height: 100%;
   text-align: center;
   align-items: center;
-  &:hover {
-    border-bottom: 1px solid #fff;
-    cursor: pointer;
-  }  &:active {
-    border-bottom: 1px solid #fff;
-  }
+  cursor: pointer;
+  list-style: none;
+  height: 100px;
+}
 
+.active_option_menu {
+  border-bottom: 1px solid #fff;
 }
 
 .menu .login {
@@ -69,28 +69,10 @@
   color: #0f182e;
 }
 
-.submenu {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-}
-
-.submenu_items {
-  width: 100%;
-  &:hover {
-    cursor: pointer;
-  }
-}
-
-.submenu li {
-  display: inline-block;
-  padding: 1.9rem;
-  font-size: 15px;
-  color: #fff;
-}
-
 .form_search {
   padding: 1.9rem;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .search_movie {
@@ -115,4 +97,28 @@
   color: rgb(255, 255, 255);
   border: none;
   outline: none;
+}
+
+
+@media screen and (max-width: 1000px) {
+  .header {
+    display: flex;
+    flex-direction: column;
+  }
+  .brand {
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+  .brand_info {
+    width: 100%;
+    text-align: center;
+    margin-top: 20px;
+  }
+  .menu {
+    flex-wrap: wrap;
+  }
+  .form_search {
+    justify-content: center;
+  }
 }
