--- a/src/components/Movies/style.module.scss
+++ b/src/components/Movies/style.module.scss
@@ -3,7 +3,7 @@
 }
 
 .details_movies {
-  width: 80%;
+  width: 90%;
 }
 
 .title_list {
@@ -23,7 +23,7 @@
   justify-content: flex-end;
   align-items: center;
   color: rgb(255, 196, 0);
-  &:hover{
+  &:hover {
     cursor: pointer;
   }
 }
@@ -36,4 +36,13 @@
 .movie {
   margin: 0rem 0.5rem;
   list-style: none;
+}
+
+@media screen and (max-width: 1000px) {
+  .details_movies {
+    width: 100%;
+  }
+  .movie {
+    width: 20%;
+  }
 }
