--- a/src/containers/Home/style.module.scss
+++ b/src/containers/Home/style.module.scss
@@ -2,3 +2,9 @@
   display: flex;
   color: #fff;
 }
+
+@media screen and (max-width: 1000px){
+  .content_movies {
+    flex-direction: column-reverse;
+  }
+}
