--- a/src/components/Movies/MovieDetails/style.module.scss
+++ b/src/components/Movies/MovieDetails/style.module.scss
@@ -10,9 +10,11 @@
 
 .img {
   width: 100%;
-  height: 100%;
   opacity: 0.2;
   filter: blur(8px);
+  position: absolute;
+  top: 0px;
+  left: 0px;
 }
 
 .movie_content_details {
@@ -23,15 +25,14 @@
 }
 
 .img_background {
-  position: absolute;
   width: 100%;
-  bottom: 0px;
-  top: 0px;
   text-align: center;
   color: #fff;
   display: flex;
   z-index: 1;
+  margin: 1rem 0rem;
 }
+
 .img_front {
   width: 70%;
 }
@@ -41,6 +42,7 @@
   justify-content: center;
   align-items: center;
   width: 50%;
+  z-index: 1;
   animation: fadeImage 2s forwards;
   -webkit-animation: fadeImage 2s forwards;
   -o-animation: fadeImage 2s forwards;
@@ -53,6 +55,7 @@
   flex-direction: column;
   justify-content: center;
   width: 50%;
+  z-index: 1;
 }
 
 .star_rating {
@@ -98,6 +101,11 @@
   margin: 1rem 0rem;
 }
 
+.content_description {
+  font-size: 18px;
+  font-family: "Roboto";
+  margin: 1rem 0rem;
+}
 
 @keyframes fadeImage {
   from {
@@ -105,5 +113,26 @@
   }
   to {
     opacity: 1;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .img_background {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .wrapper_details {
+    width: 100%;
+    margin-top: 1rem;
+  }
+  .title_details {
+    font-size: 20px;
+  }
+  .content_details {
+    font-size: 12px;
+  }
+  .content_description {
+    font-size: 14px;
   }
 }
