--- a/src/components/Footer/style.module.scss
+++ b/src/components/Footer/style.module.scss
@@ -1,4 +1,3 @@
-
 .footer {
   display: flex;
   flex-direction: column;
@@ -19,7 +18,29 @@
   margin: 1rem 0rem;
 }
 
-.submenu_social > a{
+.submenu_social > a {
   color: #fff;
   padding: 0rem 1rem;
+}
+
+.img {
+  width: 25px;
+  animation: Rotate 4s linear infinite;
+}
+
+@-moz-keyframes Rotate {
+  100% {
+    -moz-transform: rotate(360deg);
+  }
+}
+@-webkit-keyframes Rotate {
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+@keyframes Rotate {
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
 }
