added lazy on image

--- a/src/components/Movies/style.module.scss
+++ b/src/components/Movies/style.module.scss
@@ -36,6 +36,8 @@
 .movie {
   margin: 0rem 0.5rem;
   list-style: none;
+  width: 140px;
+  height: 220px;
 }
 
 @media screen and (max-width: 1000px) {
