--- a/src/components/Movies/Movie/style.module.scss
+++ b/src/components/Movies/Movie/style.module.scss
@@ -7,10 +7,10 @@
   justify-content: center;
   flex-direction: column;
   position: relative;
-  animation: fadeImage 2s forwards;
+/*   animation: fadeImage 2s forwards;
   -webkit-animation: fadeImage 2s forwards;
   -o-animation: fadeImage 2s forwards;
-  -moz-animation: fadeImage 2s forwards;
+  -moz-animation: fadeImage 2s forwards; */
   &:hover{
     .description {
       display: block;
@@ -57,12 +57,7 @@
   height: 100%;
 }
 
-.movie_img {
-  width: 100%;
-  height: 100%;
-  cursor: pointer;
 
-}
 
 .movie_description {
   position: relative;
