--- a/src/components/Movies/GridMovies/style.scss
+++ b/src/components/Movies/GridMovies/style.scss
@@ -3,7 +3,7 @@
   width: 100%;
   grid-template-columns: repeat(4, auto);
   grid-gap: 0.5rem;
-}
-.movie {
-  width: 100%;
+  &__movie {
+    width: 100%;
+  }
 }
