--- a/src/components/Movies/StarsRating/style.scss
+++ b/src/components/Movies/StarsRating/style.scss
@@ -1,10 +1,9 @@
-.wrapper_stars {
+.rating {
   display: flex;
   align-items: center;
   justify-content: center;
   color: rgb(255, 196, 0);
-}
-
-.content_star {
-  margin: 0rem 0.2rem;
+  &__star {
+    margin: 0rem 0.2rem;
+  }
 }
