fixed responsive css

--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -2,10 +2,11 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  margin: 2rem 0rem;
   &__border {
     border-top: 1px solid #fff;
     width: 15%;
-    margin-top: 2rem;
+    margin: 2rem 0rem;
   }
   &__submenu_social {
     display: flex;
@@ -13,7 +14,7 @@
     justify-content: flex-end;
     align-items: center;
     margin: 1rem 0rem;
-    width: 50%;
+    width: 25%;
     & > a {
       color: #fff;
       padding: 0rem 1rem;
