--- a/src/components/Movies/MovieDetails/style.scss
+++ b/src/components/Movies/MovieDetails/style.scss
@@ -91,7 +91,6 @@
   }
 }
 
-
 @keyframes fadeImage {
   from {
     opacity: 0;
@@ -102,23 +101,27 @@
 }
 
 @media screen and (max-width: 1000px) {
-  &__background {
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  &__movie {
-    width: 100%;
-    margin-top: 1rem;
-    & > p {
-      font-size: 20px;
-    }
-    &__info {
-      font-size: 12px;
-    }
-    &__details {
-      &__info {
-        font-size: 14px;
+  .content {
+    &__image {
+      &__background {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        &__movie {
+          width: 100%;
+          margin-top: 1rem;
+          & > p {
+            font-size: 20px;
+          }
+          &__info {
+            font-size: 12px;
+          }
+          &__details {
+            &__info {
+              font-size: 14px;
+            }
+          }
+        }
       }
     }
   }
