--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -24,6 +24,16 @@
       align-items: center;
       width: 100%;
     }
+    &__logo {
+      height: auto;
+      width: 380px;
+      mix-blend-mode: lighten;
+    
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
     &__info {
       text-align: left;
       width: 50%;
@@ -38,13 +48,3 @@
   }
 }
 
-.logo {
-  height: auto;
-  width: 380px;
-  mix-blend-mode: lighten;
-
-  img {
-    width: 100%;
-    height: 100%;
-  }
-}
