--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,5 +1,5 @@
 @mixin responsive {
-  @media only screen and (max-width: 1024px) {
+  @media screen and (max-width: 1024px) {
     @content;
   }
 }
