replace @import with @use on scss

--- a/src/components/Header/Menu/style.scss
+++ b/src/components/Header/Menu/style.scss
@@ -1,5 +1,5 @@
-@import "../../../styles/utils.scss";
-@import "../../../styles/mixins.scss";
+@use "../../../styles/utils.scss";
+@use "../../../styles/mixins.scss" as *;
 
 .menu {
   display: flex;
