--- a/src/components/Movies/BestMovie/TopMovie/style.scss
+++ b/src/components/Movies/BestMovie/TopMovie/style.scss
@@ -1,3 +1,5 @@
+@use '../../../../styles/mixins.scss' as *;
+
 .top {
   position: relative;
   &__description {
@@ -32,8 +34,10 @@
     }
   }
   &__img {
-    width: 100%;
-    height: 100%;
+    width: 950px;
+    @include responsive {
+      width: 420px;
+    }
     animation: fadeImage 2s forwards;
     -webkit-animation: fadeImage 2s forwards;
     -o-animation: fadeImage 2s forwards;
